[package]
name = "linewar-org"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "leaderboard-db",
    "leaderboard-scraper"
]

[dependencies]
leaderboard-db = { path = "./leaderboard-db" }
leaderboard-scraper = { path = "./leaderboard-scraper" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt", "rt-multi-thread"]
