[package]
name = "linewar-org"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "leaderboard-db",
    "leaderboard-scraper",
    "leaderboard-server",
]

[dependencies]
dotenv = "0.15.0"
leaderboard-db = { path = "./leaderboard-db" }
leaderboard-scraper = { path = "./leaderboard-scraper" }
serde_json = "1.0.81"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dependencies.clap]
version = "3.1.18"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt", "rt-multi-thread"]
