[package]
name = "leaderboard-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.9"
thiserror = "1.0.31"
byteorder = "1.4.3"
chrono = "0.4.19"

[dependencies.diesel]
version = "1.4.8"
default-features = false
features = ["postgres", "r2d2"]

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt", "rt-multi-thread", "sync"]
