[package]
name = "leaderboard-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
thiserror = "1.0.31"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
cssparser = "0.29.4"

[dependencies.reqwest]
version = "0.11.10"
features = ["cookies", "json"]

[dependencies.serde]
version = "1.0.137"
features = ["serde_derive"]

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt", "rt-multi-thread"]

[dev-dependencies]
dotenv = "0.15.0"
