[package]
name = "leaderboard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11.1" }
axum = "0.5.6"
dotenv = "0.15.0"
leaderboard-db = { path = "../leaderboard-db" }
tokio = "1.18.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
