[package]
name = "leaderboard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
askama = { version = "0.11.1" }
axum = "0.5.6"
axum-macros = "0.2.2"
chrono = "0.4.19"
dotenv = "0.15.0"
futures-util = "0.3.21"
leaderboard-db = { path = "../leaderboard-db" }
plotters = "0.3.1"
plotters-svg = "0.3.1"
redis = { version = "0.21.5", features = ["connection-manager", "tokio-comp"] }
tokio = "1.18.2"
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["trace"] }
tower-redis = { version = "0.2.0", features = ["util"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.1"
